--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div id="details"></div>
 		</div>
 		<script id="event-template" type="text/x-jquery-tmpl">
-			<div class="event" style="width:${width}px;height:${height}px;left:${left}px;top:${top}px">
+			<div class="event" style="width:${width}px;height:${height}px;left:${left}px;top:${top}px" data-index="${index}">
 				<h3 class="header">
 					{{if start === 12}} 
 						Noon 
@@ -35,6 +35,30 @@
 					<p class="description">${description}</p>
 				</div>
 			</div>		
+		</script>
+		<script id="event-edit-form" type="text/x-jquery-tmpl">
+			<div class="event-form">
+				<div>
+					<label for="end">Start</label>
+					<input type="datetime" name="start" id="start" value="${start}" />
+				</div>
+				<div>
+					<label for="end">End</label>
+					<input type="datetime" name="end" id="end" value="${end}" />
+				</div>
+				<div>
+					<label for="title">Title</label>
+					<input type="text" name="title" id="title" value="${title}" />
+				</div>
+				<div>
+					<label for="description">Description</label>
+					<textarea type="text" name="description" id="description">${description}</textarea>
+				</div>
+				<div class="buttons">
+					<button class="cancel">Cancel</button>
+					<button class="save">Save</button>
+				</div>
+			</div>
 		</script>
 	</body>
 </html>
