--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <html>
 	<head>
 		<title>Day Calendar</title>
-		<link type="text/css" href="reset.css" rel="stylesheet" />
-		<link type="text/css" href="calendar.css" rel="stylesheet" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script src="jquery.tmpl.min.js"></script>
-		<script src="calendar.js" ></script>
+		<link type="text/css" href="css/reset.css" rel="stylesheet" />
+		<link type="text/css" href="css/calendar.css" rel="stylesheet" />
+		<script data-main="js/bootstrap" src="js/libs/require/require.js"></script>
 	</head>
 	<body>
 		<div class="page">
@@ -17,48 +15,6 @@
 				<div id="timeSlotsColumn">
 				</div>
 			</div>
-			<div id="details"></div>
 		</div>
-		<script id="event-template" type="text/x-jquery-tmpl">
-			<div class="event" style="width:${width}px;height:${height}px;left:${left}px;top:${top}px" data-index="${index}">
-				<h3 class="header">
-					{{if start === 12}} 
-						Noon 
-					{{else start < 12}}
-						${start} AM
-					{{else}} 
-						${start - 12} PM 
-					{{/if}}
-				</h3>
-				<div class="body">
-					<p class="title">${title}</p>
-					<p class="description">${description}</p>
-				</div>
-			</div>		
-		</script>
-		<script id="event-edit-form" type="text/x-jquery-tmpl">
-			<div class="event-form">
-				<div>
-					<label for="end">Start</label>
-					<input type="datetime" name="start" id="start" value="${start}" />
-				</div>
-				<div>
-					<label for="end">End</label>
-					<input type="datetime" name="end" id="end" value="${end}" />
-				</div>
-				<div>
-					<label for="title">Title</label>
-					<input type="text" name="title" id="title" value="${title}" />
-				</div>
-				<div>
-					<label for="description">Description</label>
-					<textarea type="text" name="description" id="description">${description}</textarea>
-				</div>
-				<div class="buttons">
-					<button class="cancel">Cancel</button>
-					<button class="save">Save</button>
-				</div>
-			</div>
-		</script>
 	</body>
 </html>
